<resources>
    <string name="app_name">TestApp</string>
    <string name="main_text">Hello, World!</string>
    <string name="button1_text">Button1</string>
    <string name="button2_text">Button2</string>
    <string name="button3_text">Button3</string>
    <string name="screen2_text">Random number\n from 0 to %1d:</string>
    <string name="text_view_2">0</string>
    <string name="random_number">0</string>
    <string name="toast_string">Button 1 pressed.</string>
    <string name="btnOk">OK</string>
    <string name="btnCancel">Cancel</string>
    <string name="tvOut">Press OK or Cancel</string>
    <string name="msgOk">"Pressed button <b>OK</b>"</string>
    <string name="msgCn">"Pressed button <b>Cancel</b>"</string>

    <string name="menu1">Menu 1</string>
    <string name="menu2">Menu 2</string>
    <string name="menu3">Menu 3</string>
    <string name="menu4">Menu 4</string>
</resources>
